# ApplicationSourceCode

./: README.md
DataGenerator/: .cproject  Config.h  DataGenerator  Document  TestCase  main.cpp  makefile
DataStructure/: StratData.cpp  StratData.h  Task.h  a.out
Ddesign/: InterfaceSegrigation.cpp  LSovDesig.cpp  OpenClose.cpp  OpenClose_Better.cpp
ExerSizes/: PairSum.cpp
PrioQueue/: MyTask.cpp  PrioQueue.cpp  PrioQueue.h
VocabsEasy/: CMakeLists.txt  main.cpp
VocabsEasy/resource/verbs/: verbs.json
VocabsEasy/vocabs_app/: get_resource_information.cpp  get_resource_information.h  verb.cpp  verb.h  vocabs_data.h
VocabsEasy/vocabs_ui/: main_window.cpp  main_window.h  verb_input.cpp  verb_input.h  verb_practice.cpp  verb_practice.h  verb_window.cpp  verb_window.h
algorithm/: a.out  beautiful_binary_string.cpp  copy_if.cpp  my_copy.cpp  remove_if.cpp  rotate.cpp  unique.cpp
cinemo_windows/wave_to_mp3_encoder/: CMakeLists.txt  main.cpp
cinemo_windows/wave_to_mp3_encoder/doc/: doc.plantuml  wave_mp3_encoder.docx
cinemo_windows/wave_to_mp3_encoder/include/: encoder_adaptor.h  encoder_core.h  encoder_interface.h
cinemo_windows/wave_to_mp3_encoder/include/browser/: directory_browser.h
cinemo_windows/wave_to_mp3_encoder/include/helper/: logger.h
cinemo_windows/wave_to_mp3_encoder/src/browser/: directory_browser.cpp
cinemo_windows/wave_to_mp3_encoder/src/encoder/: lame_encoder.cpp  wav_header.cpp
cuncurrency/: a.out  pakaged_task.cpp  simple_thread.cpp  thread_safe_queue.cpp
policy_design/: CMakeLists.txt  read.txt
policy_design/include/: console_output_policy.h  english_language.h  german_language.h  hallow_world_interface.h
policy_design/src/: hallow_world.cpp
window_codac/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  main.cpp  mp3encoder
window_codac/include/: encoder_adaptor.h  encoder_core.h  encoder_interface.h
window_codac/include/browser/: directory_browser.h  wav_browser.h
window_codac/include/encoder/: i_encoder.h  lame_encoder.h  mp3_encoder.h
window_codac/include/helper/: encoder_type.h  logger.h  safe_queue.h  task_pool.h
window_codac/src/: encoder_core.cpp  encoder_interface.cpp
window_codac/src/browser/: directory_browser.cpp  wav_browser.cpp
window_codac/src/encoder/: lame_encoder.cpp  mp3_encoder.cpp
(+624 files in other folders)
